--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"cf-typegen": "wrangler types --env-interface CloudflareBindings"
 	},
 	"dependencies": {
-		"hono": "^4.9.9"
+		"hono": "^4.9.9",
+		"npm-registry-sdk": "^1.2.1"
 	},
 	"devDependencies": {
 		"wrangler": "^4.40.2"
