--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-	"name": "timelock-registry",
-	"type": "module",
-	"scripts": {
-		"dev": "wrangler dev",
-		"deploy": "wrangler deploy --minify",
-		"cf-typegen": "wrangler types --env-interface CloudflareBindings"
-	},
-	"dependencies": {
-		"hono": "^4.9.9",
-		"npm-registry-sdk": "^1.2.1"
-	},
-	"devDependencies": {
-		"wrangler": "^4.40.2"
-	}
+  "name": "timelock-npm-registry",
+  "type": "module",
+  "scripts": {
+    "dev": "wrangler dev",
+    "deploy": "wrangler deploy --minify",
+    "cf-typegen": "wrangler types --env-interface CloudflareBindings"
+  },
+  "dependencies": {
+    "hono": "^4.9.9",
+    "npm-registry-sdk": "^1.2.1"
+  },
+  "devDependencies": {
+    "wrangler": "^4.40.2"
+  }
 }
