--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -14,6 +14,11 @@
   "observability": {
     "enabled": true,
   },
+  "workers_dev": false,
+  "route": {
+    "custom_domain": true,
+    "pattern": "timelock-npm-registry.dev",
+  },
   /**
    * Smart Placement
    * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
